--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
 </head>
 <body>
   <div class="text-container">
-    <span class="text first-text">Hello, </span>
+    <span class="text first-text">{</span>
     <span class="text sec-text">I am Yane</span>
+    <span class="text first-text">}</span>
   </div>
 
   <script>
     const text = document.querySelector(".sec-text");
     
     const textLoad = () => {
-      setTimeout(() => {text.textContent = "FreeLancer"},0);
-      setTimeout(() => {text.textContent = "Blogger"},4000);
-      setTimeout(() => {text.textContent = "Youtuber"},8000);
+      setTimeout(() => {text.textContent = "I am Yane."},0);
+      setTimeout(() => {text.textContent = "This is my CV"},4000);
+      setTimeout(() => {text.textContent = "Enjoy your stay!"},8000);
     }
     textLoad();
     setInterval(textLoad, 12000);
