--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     const textLoad = () => {
       setTimeout(() => {text.textContent = "I am Yane."},0);
-      setTimeout(() => {text.textContent = "This is my CV"},4000);
+      setTimeout(() => {text.textContent = "This is my CV."},4000);
       setTimeout(() => {text.textContent = "Enjoy your stay!"},8000);
     }
     textLoad();
