--- a/index.html
+++ b/index.html
@@ -295,15 +295,7 @@
                                 <div class="carousel-item" data-interval="3500">
                                     <img src="C++ Advanced - May 2022 - Certificate.jpeg" class="d-block w-100"
                                         alt="...">
-                                </div>
-                                <div class="carousel-item" data-interval="3500">
-                                    <img src="Programming Fundamentals with C# - May 2023 - Certificate.jpeg"
-                                        class="d-block w-100" alt="...">
-                                </div>
-                                <div class="carousel-item" data-interval="3500">
-                                    <img src="C# Advanced - September 2023 - Certificate.jpeg" class="d-block w-100"
-                                        alt="...">
-                                </div>
+                                </div>=
                             </div>
                             <a class="carousel-control-prev" href="#carouselExampleInterval" role="button"
                                 data-slide="prev">
