--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                                 <div class="carousel-item" data-interval="3500">
                                     <img src="C++ Advanced - May 2022 - Certificate.jpeg" class="d-block w-100"
                                         alt="...">
-                                </div>=
+                                </div>
                             </div>
                             <a class="carousel-control-prev" href="#carouselExampleInterval" role="button"
                                 data-slide="prev">
