--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <!-- Right Side Row 1 -->
                     <div class="col-12 p-0">
                         <h3 class="titles">Кратко Summary</h3>
-                        <p>На 22 години съм и университетски студент, който обича програмирането над всичко. Винаги
+                        <p>Студент съм в икономическия университет, на 22 г. съм, и обичам програмирането над всичко. Винаги
                             търся нови предизвикателства и начини да подобря уменията си в тази област. В свободното си
                             време изучавам нови технологии и разработвам собствени проекти. Мечтая да създам иновативни
                             решения и да допринеса за технологичния свят.</p>
@@ -159,12 +159,26 @@
                     <!-- Right Side Row 5 -->
                     <div class="col-12 p-0">
                         <h3 class="titles">Обучение</h3>
-                        <h5>Биотехнически науки</h5>
-                        <p>2015 - 2021 | Bovenbouw Sint - Lutgart (Middle School)</p>
+                        <h5>Специалност: -</h5>
+                        <p>2007 - 2011 | Йордан Йовков (основно)</p>
+                        <hr>
+                        <h5>Специалност: -</h5>
+                        <p>2011 - 2013 | Horizont (основно)</p>
+                        <hr>
+                        <h5>Специалност: Техник</h5>
+                        <p>2013 - 2014 | Sint - Jan (средно училище)</p>
+                        <p><i>Основни познания в атмосферата на електрониката и дърводелството</i></p>
+                        <hr>
+                        <h5>Специалност: Готвач и Техник</h5>
+                        <p>2014 - 2015 | Sint - Jan (средно училище)</p>
+                        <p><i>Напреднали познания в атмосферата на електрониката и готварчесвтото</i></p>
+                        <hr>
+                        <h5>Специалност: Биотехнически науки</h5>
+                        <p>2015 - 2021 | Bovenbouw Sint - Lutgart (средно училище)</p>
                         <p><i>Учено в силно теоретичен клас, с акцент върху физика, химия и математика.</i></p>
                         <hr>
-                        <h5>Биотехнически науки</h5>
-                        <p>2015 - 2021 | Bovenbouw Sint - Lutgart (Middle School)</p>
+                        <h5>Специалност: Програмиране</h5>
+                        <p>2022 - 2023 | SoftUni</p>
                         <p><i>Изучаване на програмиране (C++) с цел да бъде
                             може да създава видеоигри, приложения, ботове и др. .
                             Фокусиране върху back-end и front-end.</i></p>
