--- a/index.html
+++ b/index.html
@@ -143,11 +143,10 @@
                 </div>
             </div>
             <!-- Right Side (75%) -->
-            <div class="col-lg-8 bg-light p-5 ml-5">
+            <div class="col-lg-8 bg-light ml-5">
                 <div class="row cv-section fancy">
                     <!-- Right Side Row 1 -->
                     <div class="col-12 p-0">
-                        <h3 class="titles">Кратко Summary</h3>
                         <p>Студент съм в икономическия университет, на 22 г. съм, и обичам програмирането над всичко. Винаги
                             търся нови предизвикателства и начини да подобря уменията си в тази област. В свободното си
                             време изучавам нови технологии и разработвам собствени проекти. Мечтая да създам иновативни
