--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Test</title>
+    <title>Yane Zhekov - 126571 - Personal CV</title>
 </head>
 
 <!--
