--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Yane Zhekov - 126571 - Personal CV</title>
+    <title>Test</title>
 </head>
 
 <!--
@@ -147,7 +147,7 @@
                 <div class="row cv-section fancy">
                     <!-- Right Side Row 1 -->
                     <div class="col-12 p-0">
-                        <p>Студент съм в икономическия университет, на 22 г. съм, и обичам програмирането над всичко. Винаги
+                        <p>Студент съм в икономическия университет, на 21 г. съм, и обичам програмирането над всичко. Винаги
                             търся нови предизвикателства и начини да подобря уменията си в тази област. В свободното си
                             време изучавам нови технологии и разработвам собствени проекти. Мечтая да създам иновативни
                             решения и да допринеса за технологичния свят.</p>
@@ -206,7 +206,7 @@
                         <p><strong>Кол център</strong></p>
                         <p>Sutherland</p>
                         <p>2022 - 2023</p>
-                        <p>Клиентска/ технисческа поддръжка на клиенти при McAfee</p>
+                        <p>Клиентска/ техническа поддръжка на клиенти при McAfee</p>
                         <br>
                         <p><strong>Уеб Дизайнер</strong></p>
                         <p>Optimiziraime</p>
@@ -244,7 +244,7 @@
                         <ul>
                             <li>
                                 <p>Stilmers.bg (wordpress)</p>
-                                <p><i>Сайт за архитекти и строителство</i></p>
+                                <p><i>Сайт за строителство и архитектура</i></p>
                             </li>
                             <hr>
                             <li>
@@ -254,7 +254,7 @@
                             <hr>
                             <li>
                                 <p>Dominaresidence.bg (wordpress)</p>
-                                <p><i>Сайт за строителски услуги</i>
+                                <p><i>Сайт за строителни предприемачи</i>
                                 <p>
                             </li>
                             <hr>
